fix: caracteres UTF-8 con HTML entities y unicode escapes

--- a/public/informe-cobertura.html
+++ b/public/informe-cobertura.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
 <meta charset="UTF-8">
@@ -133,8 +133,8 @@
     cursor: pointer; user-select: none; transition: color .15s;
   }
   thead th:hover { color: var(--text); }
-  thead th.asc::after  { content: ' â†‘'; color: var(--accent); }
-  thead th.desc::after { content: ' â†“'; color: var(--accent); }
+  thead th.asc::after  { content: ' \2191'; color: var(--accent); }
+  thead th.desc::after { content: ' \2193'; color: var(--accent); }
   tbody td { padding: 10px 14px; font-size: 13px; border-bottom: 1px solid rgba(42,42,58,0.5); vertical-align: middle; }
   tbody tr:last-child td { border-bottom: none; }
   tbody tr:hover td { background: rgba(255,255,255,.02); }
@@ -172,21 +172,21 @@
 <div class="wrap">
 
   <div class="header">
-    <div class="eyebrow">Illice Brands Group · White Division</div>
+    <div class="eyebrow">Illice Brands Group &middot; White Division</div>
     <h1>Informe de <span>Cobertura</span> de Lecturas</h1>
     <p class="subtitle">OUTs B2C Shopify validados en Odoo (date_done) vs paquetes escaneados en la app</p>
   </div>
 
   <div class="config-panel">
     <div class="field">
-      <label>Período rápido</label>
+      <label>Per&iacute;odo r&aacute;pido</label>
       <select id="quickPeriod">
         <option value="">Personalizado</option>
         <option value="0">Hoy</option>
         <option value="1">Ayer</option>
-        <option value="7" selected>Últimos 7 días</option>
-        <option value="14">Últimas 2 semanas</option>
-        <option value="30">Últimos 30 días</option>
+        <option value="7" selected>&Uacute;ltimos 7 d&iacute;as</option>
+        <option value="14">&Uacute;ltimas 2 semanas</option>
+        <option value="30">&Uacute;ltimos 30 d&iacute;as</option>
       </select>
     </div>
     <div class="field">
@@ -198,10 +198,10 @@
       <input type="date" id="dateTo">
     </div>
     <button class="btn" id="loadBtn" onclick="loadReport()">
-      <span id="btnIcon">▶</span><span id="btnText">Cargar informe</span>
+      <span id="btnIcon">&#9654;</span><span id="btnText">Cargar informe</span>
     </button>
     <button class="btn btn-ghost" id="exportBtn" onclick="exportExcel()" style="display:none;">
-  â†“ Exportar Excel
+  &#8595; Exportar Excel
 </button>
   </div>
 
@@ -218,23 +218,23 @@
   <div class="kpi-row">
     <div class="kpi-card" style="--kc:var(--text)">
       <div class="kpi-label">OUTs en Odoo (B2C)</div>
-      <div class="kpi-value" id="kpiTotal">â€”</div>
-      <div class="kpi-sub">albaranes validados en período</div>
+      <div class="kpi-value" id="kpiTotal">&mdash;</div>
+      <div class="kpi-sub">albaranes validados en per&iacute;odo</div>
     </div>
     <div class="kpi-card" style="--kc:var(--accent4)">
       <div class="kpi-label">Escaneados en app</div>
-      <div class="kpi-value" id="kpiScanned">â€”</div>
-      <div class="kpi-sub">paquetes leídos en la app</div>
+      <div class="kpi-value" id="kpiScanned">&mdash;</div>
+      <div class="kpi-sub">paquetes le&iacute;dos en la app</div>
     </div>
     <div class="kpi-card" style="--kc:var(--accent3)">
-      <div class="kpi-label" data-tip="OUTs de Odoo no encontrados en ningún palet ni sesión activa">Sin escanear</div>
-      <div class="kpi-value" id="kpiMissing">â€”</div>
+      <div class="kpi-label" data-tip="OUTs de Odoo no encontrados en ning&uacute;n palet ni sesi&oacute;n activa">Sin escanear</div>
+      <div class="kpi-value" id="kpiMissing">&mdash;</div>
       <div class="kpi-sub">no registrados en app</div>
     </div>
     <div class="kpi-card" style="--kc:var(--accent2)" id="kpiCovCard">
-      <div class="kpi-label" data-tip="(Escaneados / OUTs Odoo) × 100">Cobertura global</div>
-      <div class="kpi-value" id="kpiCoverage">â€”</div>
-      <div class="kpi-sub" id="kpiLabel">â€”</div>
+      <div class="kpi-label" data-tip="(Escaneados / OUTs Odoo) &times; 100">Cobertura global</div>
+      <div class="kpi-value" id="kpiCoverage">&mdash;</div>
+      <div class="kpi-sub" id="kpiLabel">&mdash;</div>
     </div>
   </div>
 
@@ -250,14 +250,14 @@
   <div class="section-title">Desglose por transportista</div>
   <div class="carrier-grid" id="carrierGrid">
     <div class="empty-state" style="grid-column:1/-1">
-      <div class="icon">ðŸ“¦</div>
-      <p>Selecciona un período y pulsa "Cargar informe"</p>
+      <div class="icon">&#128230;</div>
+      <p>Selecciona un per&iacute;odo y pulsa "Cargar informe"</p>
     </div>
   </div>
 
   <!-- Daily chart -->
   <div class="chart-wrap" id="chartWrap">
-    <div class="section-title">Evolución diaria <small>â€” OUTs Odoo vs escaneados en app</small></div>
+    <div class="section-title">Evoluci&oacute;n diaria <small>&mdash; OUTs Odoo vs escaneados en app</small></div>
     <div class="chart-scroll">
       <svg id="dailySvg" height="200"></svg>
     </div>
@@ -267,7 +267,7 @@
   <div class="table-section" id="tableSection">
     <div class="table-header">
       <div>
-        <div class="table-title">Todos los OUTs del período</div>
+        <div class="table-title">Todos los OUTs del per&iacute;odo</div>
         <div id="tableSubtitle" style="font-family:var(--font-mono);font-size:11px;color:var(--muted);margin-top:3px;"></div>
       </div>
       <div class="table-filters">
@@ -277,8 +277,8 @@
         </select>
         <select id="filterStatus" onchange="filterTable()">
           <option value="">Todos los estados</option>
-          <option value="scanned">âœ… Escaneado</option>
-          <option value="missing">âŒ Sin escanear</option>
+          <option value="scanned">&#10003; Escaneado</option>
+          <option value="missing">&#10007; Sin escanear</option>
         </select>
       </div>
     </div>
@@ -287,11 +287,11 @@
         <thead>
           <tr>
             <th onclick="sortBy('carrier')"   id="th-carrier">Transportista</th>
-            <th onclick="sortBy('name')"      id="th-name">Albarán</th>
+            <th onclick="sortBy('name')"      id="th-name">Albar&aacute;n</th>
             <th onclick="sortBy('tracking')"  id="th-tracking">Tracking</th>
             <th onclick="sortBy('origin')"    id="th-origin">Pedido</th>
             <th onclick="sortBy('client')"    id="th-client">Cliente</th>
-            <th onclick="sortBy('dateDone')"  id="th-dateDone">Validado en Odoo</th>
+            <th onclick="sortBy('dateDone')"  id="th-dateDone">Validado en Odoo &#8595;</th>
             <th onclick="sortBy('scanned')"   id="th-scanned">Estado app</th>
           </tr>
         </thead>
@@ -307,7 +307,7 @@
 </div>
 <script>
 // ================================================================
-// CONFIG â€” auto-detecta si es local o Railway
+// CONFIG - auto-detecta si es local o Railway
 // ================================================================
 const API_BASE = (location.hostname === 'localhost' || location.hostname === '127.0.0.1')
   ? 'http://localhost:3001'
@@ -348,7 +348,7 @@ function setQuick(n) {
   document.getElementById('dateTo').value   = fmt(t);
 }
 function fmtDT(s) {
-  if (!s) return 'â€”';
+  if (!s) return '\u2014';
   const d = new Date((s + '').replace(' ','T') + (s.includes('T')||s.includes('Z') ? '' : 'Z'));
   return isNaN(d) ? s : d.toLocaleDateString('es-ES',{day:'2-digit',month:'2-digit',year:'numeric'})
                       + ' ' + d.toLocaleTimeString('es-ES',{hour:'2-digit',minute:'2-digit'});
@@ -356,7 +356,7 @@ function fmtDT(s) {
 async function checkAPI() {
   try {
     const r = await fetch(API_BASE + '/api/health', { signal: AbortSignal.timeout(4000) });
-    setStatus(r.ok ? 'ok' : 'error', r.ok ? 'API conectada · listo' : 'API no responde');
+    setStatus(r.ok ? 'ok' : 'error', r.ok ? 'API conectada \u00b7 listo' : 'API no responde');
   } catch { setStatus('error', 'No se puede conectar con la API'); }
 }
 function setStatus(s, t) {
@@ -383,7 +383,7 @@ async function loadReport() {
   btn.disabled = true;
   document.getElementById('btnIcon').innerHTML = '<span class="spinner"></span>';
   document.getElementById('btnText').textContent = 'Consultando Odoo...';
-  setStatus('loading', 'Consultando OUTs B2C en Odoo (' + from + ' â†’ ' + to + ')...');
+  setStatus('loading', 'Consultando OUTs B2C en Odoo (' + from + ' \u2192 ' + to + ')...');
   setProgress(30);
 
   try {
@@ -395,7 +395,7 @@ async function loadReport() {
       allRecs.push(...(info.records || []));
     }
     renderAll(data);
-    setStatus('ok', 'Informe cargado · ' + allRecs.length.toLocaleString('es-ES') + ' OUTs · ' + new Date().toLocaleTimeString('es-ES'));
+    setStatus('ok', 'Informe cargado \u00b7 ' + allRecs.length.toLocaleString('es-ES') + ' OUTs \u00b7 ' + new Date().toLocaleTimeString('es-ES'));
     document.getElementById('exportBtn').style.display = 'inline-flex';
     setProgress(null);
   } catch(e) {
@@ -404,7 +404,7 @@ async function loadReport() {
     console.error(e);
   } finally {
     btn.disabled = false;
-    document.getElementById('btnIcon').textContent  = '▶';
+    document.getElementById('btnIcon').textContent  = '\u25b6';
     document.getElementById('btnText').textContent  = 'Cargar informe';
   }
 }
@@ -420,10 +420,10 @@ async function apiFetch(path) {
 function covColor(p) { return p >= 95 ? 'var(--accent)' : p >= 80 ? 'var(--accent2)' : 'var(--accent3)'; }
 function covColorHex(p) { return p >= 95 ? '#6ee7b7' : p >= 80 ? '#f59e0b' : '#f87171'; }
 function covLabel(p) {
-  if (p >= 95) return 'âœ… Cobertura excelente';
-  if (p >= 80) return 'ðŸŸ¡ Cobertura buena';
-  if (p >= 60) return 'ðŸŸ  Cobertura regular';
-  return 'ðŸ”´ Cobertura baja â€” revisar';
+  if (p >= 95) return '\u2705 Cobertura excelente';
+  if (p >= 80) return '\ud83d\udfe1 Cobertura buena';
+  if (p >= 60) return '\ud83d\udfe0 Cobertura regular';
+  return '\ud83d\udd34 Cobertura baja \u2014 revisar';
 }
 
 // ================================================================
@@ -495,7 +495,7 @@ function renderCards(byCarrier) {
   const active = Object.entries(byCarrier).filter(([c,d])=>d.total>0&&c!=='DESCONOCIDO')
                                           .sort((a,b)=>b[1].total-a[1].total);
   if (!active.length) {
-    grid.innerHTML='<div class="empty-state" style="grid-column:1/-1"><div class="icon">ðŸ“­</div><p>Sin OUTs en el período</p></div>';
+    grid.innerHTML='<div class="empty-state" style="grid-column:1/-1"><div class="icon">\ud83d\udd2d</div><p>Sin OUTs en el per\u00edodo</p></div>';
     return;
   }
   grid.innerHTML = active.map(([carrier,d])=>{
@@ -634,8 +634,8 @@ function applyAndRender() {
 
   const sc=filteredRec.filter(r=>r.scanned).length;
   document.getElementById('tableSubtitle').textContent=
-    total.toLocaleString('es-ES')+' registros · '+
-    sc.toLocaleString('es-ES')+' escaneados · '+
+    total.toLocaleString('es-ES')+' registros \u00b7 '+
+    sc.toLocaleString('es-ES')+' escaneados \u00b7 '+
     (total-sc).toLocaleString('es-ES')+' sin escanear';
 
   const tbody=document.getElementById('tableBody');
@@ -648,29 +648,29 @@ function applyAndRender() {
             <span style="width:7px;height:7px;border-radius:50%;background:${col};flex-shrink:0;"></span>
             <span style="font-size:12px;font-weight:600;">${r.carrier}</span>
           </span></td>
-          <td class="mono" style="color:var(--muted)">${r.name||'â€”'}</td>
-          <td class="mono">${r.tracking||'â€”'}</td>
-          <td class="mono">${r.origin||'â€”'}</td>
-          <td style="font-size:12px;max-width:180px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;" title="${r.client||''}">${r.client||'â€”'}</td>
+          <td class="mono" style="color:var(--muted)">${r.name||'\u2014'}</td>
+          <td class="mono">${r.tracking||'\u2014'}</td>
+          <td class="mono">${r.origin||'\u2014'}</td>
+          <td style="font-size:12px;max-width:180px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;" title="${r.client||''}">${r.client||'\u2014'}</td>
           <td class="mono" style="font-size:11px;color:var(--muted);white-space:nowrap;">${fmtDT(r.dateDone)}</td>
-          <td><span class="pill ${r.scanned?'p-green':'p-red'}">${r.scanned?'âœ… Escaneado':'âŒ Sin escanear'}</span></td>
+          <td><span class="pill ${r.scanned?'p-green':'p-red'}">${r.scanned?'\u2705 Escaneado':'\u274c Sin escanear'}</span></td>
         </tr>`;
       }).join('');
 
   // Pagination
   document.getElementById('pagInfo').textContent=
-    'Mostrando '+((curPage-1)*PAGE+1)+'â€“'+Math.min(curPage*PAGE,total)+' de '+total.toLocaleString('es-ES');
+    'Mostrando '+((curPage-1)*PAGE+1)+'\u2013'+Math.min(curPage*PAGE,total)+' de '+total.toLocaleString('es-ES');
 
   let btns='';
-  btns+=`<button class="pag-btn" onclick="goPage(${curPage-1})" ${curPage<=1?'disabled':''}>â€¹</button>`;
+  btns+=`<button class="pag-btn" onclick="goPage(${curPage-1})" ${curPage<=1?'disabled':''}>\u2039</button>`;
   const range=[...new Set([1,curPage-1,curPage,curPage+1,pages].filter(p=>p>=1&&p<=pages))].sort((a,b)=>a-b);
   let prev=null;
   for(const p of range){
-    if(prev!==null&&p-prev>1) btns+=`<span style="color:var(--muted);padding:0 2px;">â€¦</span>`;
+    if(prev!==null&&p-prev>1) btns+=`<span style="color:var(--muted);padding:0 2px;">\u2026</span>`;
     btns+=`<button class="pag-btn ${p===curPage?'active':''}" onclick="goPage(${p})">${p}</button>`;
     prev=p;
   }
-  btns+=`<button class="pag-btn" onclick="goPage(${curPage+1})" ${curPage>=pages?'disabled':''}>â€º</button>`;
+  btns+=`<button class="pag-btn" onclick="goPage(${curPage+1})" ${curPage>=pages?'disabled':''}>\u203a</button>`;
   document.getElementById('pagBtns').innerHTML=btns;
 
   // Update sort headers
@@ -695,7 +695,7 @@ function sortBy(col){
 }
 
 // ================================================================
-// EXPORT CSV
+// EXPORT EXCEL
 // ================================================================
 function exportExcel(soloSinEscanear) {
   if (!report) { alert('Carga primero el informe'); return; }
@@ -703,10 +703,10 @@ function exportExcel(soloSinEscanear) {
   // Cabecera del resumen
   const wb = [];
 
-  // â”€â”€ HOJA 1: RESUMEN â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
+  // HOJA 1: RESUMEN
   const resumen = [
-    ['INFORME DE COBERTURA DE LECTURAS â€” ILLICE BRANDS GROUP'],
-    ['Período', report.from + ' â†’ ' + report.to],
+    ['INFORME DE COBERTURA DE LECTURAS - ILLICE BRANDS GROUP'],
+    ['Per\u00edodo', report.from + ' \u2192 ' + report.to],
     ['Tipo', 'Solo B2C Shopify'],
     ['Generado', new Date().toLocaleString('es-ES')],
     [],
@@ -726,9 +726,9 @@ function exportExcel(soloSinEscanear) {
       })
   ];
 
-  // â”€â”€ HOJA 2: SIN ESCANEAR â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
+  // HOJA 2: SIN ESCANEAR
   const sinEscanear = [
-    ['Transportista', 'Albarán', 'Nº Pedido', 'Tracking', 'Cliente', 'Fecha validación Odoo'],
+    ['Transportista', 'Albar\u00e1n', 'N\u00ba Pedido', 'Tracking', 'Cliente', 'Fecha validaci\u00f3n Odoo'],
     ...allRecs
       .filter(r => !r.scanned)
       .sort((a, b) => (a.carrier > b.carrier ? 1 : -1))
@@ -742,9 +742,9 @@ function exportExcel(soloSinEscanear) {
       ])
   ];
 
-  // â”€â”€ HOJA 3: TODOS â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€
+  // HOJA 3: TODOS
   const todos = [
-    ['Transportista', 'Albarán', 'Nº Pedido', 'Tracking', 'Cliente', 'Fecha validación Odoo', 'Estado app'],
+    ['Transportista', 'Albar\u00e1n', 'N\u00ba Pedido', 'Tracking', 'Cliente', 'Fecha validaci\u00f3n Odoo', 'Estado app'],
     ...allRecs.map(r => [
       r.carrier,
       r.name || '',
@@ -792,5 +792,3 @@ function exportExcel(soloSinEscanear) {
 </script>
 </body>
 </html>
-
-
